# CM-Mining

./: .gitignore  README.md  pyproject.toml  requirements.txt
ontouml2networkx/: generateinput.py  ontoumlimport.py
ontouml2networkx/models/: abrahao2018agriculture-operations.json  aguiar2018rdbs-o.json  aguiar2019ooco.json  ahmad2018aviation.json  aires2022valuenetworks-geo.json  albuquerque2011ontobio.json  alpinebits2022.json  amaral2020game-theory.json  amaral2020rome.json  andersson2018value-ascription.json  andrade2023integracao.json  aristotle-ontology2019.json
ontouml2networkx/tests/: test_generateinput.py  test_ontoumlimport.py
scripts/: cli.py  frequencies.py  gspan_.py  main.py  ontouml_import.py  output.txt  query_graphs.py  requirements.txt
scripts/archimate/: filter.py  pipeline.py  statistics.py  transform.py  types.py  visualization.py
scripts/archimate/example-diagrams/: 1_business.txt  2_application.txt  3_technology_physical.txt  4_motivation.txt  5_strategy.txt  6_implementation.txt  7_other.txt  graphs_input.txt
scripts/archimate/models/: Example.json  Example2.json  Example3.json
scripts/input/: complex.data  items.data  items.test.data  items0.data  simple.data  test.data
scripts/tests/: performance_test.py  test_UMLviz.py  test_back2UML.py  test_command.py  test_confusionmatrix.py  test_confusionmatrix01.py  test_generateinput.py  test_graphClustering0.py  test_graphClustering1.py  test_ontoumlimport.py  test_patterns.py
scripts/tests/input/: graphs.data  graphs.pickle  outputpatterns.txt
scripts/tests/input_/: graphs.data  graphs.pickle  outputpatterns.txt
scripts/tests/patterns/0/: 0_9_uml.txt  1_9_uml.txt  8_8_uml.txt
scripts/trials/: TRIALS_with_imgs.md  TRIALS_with_top3.md  trials.md  trials_old.md
scripts/trials/all_layers/: TRIALS_ALL.txt  trials_table.md
scripts/trials/combined_layers/: TRIALS_COMBINED.txt  trials_table.md
scripts/trials/single_layers/: TRIALS_SINGLE.txt  trials_table.md
scripts/utils/: UMLviz.py  back2UML.py  command.py  generateinput.py  graphClustering0.py  graphClustering1.py  gspanMiner.py  ontoumlimport.py  patterns.py  randomizer.py
(+144 files in other folders)
