[tool.poetry]
name = "ontouml2networkx"
version = "1.0.0b0"
description = "OntoUML2NetworkX"
license = "Apache-2.0"
authors = ["Mattia Fumagalli <mattia.fumagalli@unibz.it>"]
maintainers = ["Pedro Paulo F. Barcelos <p.p.favatobarcelos@utwente.nl>"]
readme = "README.md"
repository = "https://github.com/unibz-core/CM-Mining"
packages = [{ include = "ontouml2networkx" }]
exclude = ["ontouml2networkx/tests"]

[tool.poetry.dependencies]
python = "^3.9"
jsonpath-rw-ext = "^1.2.2"
networkx = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


